Solution - Spring Boot Portfolio Project — Part 11
Added review changes from last task.
Added shoppingcart and cartitem logic